--- a/join.html
+++ b/join.html
@@ -68,7 +68,7 @@
             </div>
             <a href="" class="signup_button">Sign Up</a>
         </form>
-        <p>Already have an account? <a href="signin.html">Sign In</a></p>
+        <p>Already have an account? <a href="signIn.html">Sign In</a></p>
       </main>
     <footer class="foot">
         <div class="container">
