--- a/signin.html
+++ b/signin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Used to present a similar page on mobile devices-->
     <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="glm.jpg">
-    <title>Sign Up</title>
+    <title>GlamorÉvents</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Elsie:wght@400;900&display=swap" rel="stylesheet">
@@ -47,13 +47,9 @@
         <input type="text" id="search_text2" name="searchb" placeholder="Search...">
         <a href="#" class="search_icon2"> <i class="fa-solid fa-magnifying-glass"></i></a> 
     </div>
-    <main class="signup_container">
-        <h1>Sign Up</h1>
-        <form id="signup_form">
-            <div class="form_group">
-                <label for="name">Name</label>
-                <input type="text" id="name" name="name" required>
-            </div>
+    <main class="signin_container">
+        <h1>Sign In</h1>
+        <form id="signin_form">
             <div class="form_group">
                 <label for="email">Email</label>
                 <input type="email" id="email" name="email" required>
@@ -62,13 +58,9 @@
                 <label for="password">Password</label>
                 <input type="password" id="password" name="password" required>
             </div>
-            <div class="form_group">
-                <label for="confirm_password">Confirm Password</label>
-                <input type="password" id="confirm_password" name="confirm_password" required>
-            </div>
-            <a href="" class="signup_button">Sign Up</a>
+            <a href="" class="signup_button">Sign In</a>
         </form>
-        <p>Already have an account? <a href="signin.html">Sign In</a></p>
+        <p>Don't have an account? <a href="join.html">Register</a></p>
       </main>
     <footer class="foot">
         <div class="container">
